--- a/src/styles.css
+++ b/src/styles.css
@@ -19,15 +19,21 @@
     0 8px 12px 1px rgba(29, 17, 51, .04),
     0 3px 16px 2px rgba(9, 32, 77, .06),
     0 5px 10px -3px rgba(29, 17, 51, .06);
-}
 
+  /* Color palette */
+  --background: hsl(40, 20%, 95%);
+  --font-main: hsl(0, 0%, 0%);
+  --font-alt: hsl(40, 20%, 100%);
+  --primary-main: hsl(0, 55%, 60%);
+  --primary-alt: hsl(0, 45%, 70%);
+}
 
 html {
   block-size: 100%;
   inline-size: 100%;
 
   font-family: system-ui, sans-serif;
-  font-size: var(--theme-font-size, 13px);
+  font-size: var(--theme-font-size, 15px);
 }
 
 body {
@@ -37,17 +43,14 @@ body {
   box-sizing: border-box;
   margin: 0;
 
-  --background: hsl(40, 20%, 95%);
-  --font-main: hsl(0, 0%, 0%);
-  --font-alt: hsl(40, 20%, 100%);
-  --primary-main: hsl(0, 55%, 60%);
-  --primary-alt: hsl(0, 45%, 70%);
-
+  color-scheme: light;
   background: var(--background);
   color: var(--font-main);
 }
 
 body.dark-theme {
+  color-scheme: dark;
+
   --background: hsl(200, 10%, 10%);
   --font-main: hsl(40, 30%, 100%);
   --font-alt: hsl(40, 30%, 100%);
@@ -59,7 +62,6 @@ main {
   display: grid;
   justify-content: center;
   grid-template-columns: var(--centered-layout);
-
   margin-block-end: var(--space-xxl);
 }
 
@@ -88,10 +90,6 @@ header {
   color: var(--font-alt);
   background: radial-gradient(circle, var(--primary-main) 0%, var(--primary-alt) 170%);
   box-shadow: var(--shadow);
-}
-
-label {
-  margin-inline-end: var(--space-sm);
 }
 
 h1,
@@ -123,7 +121,6 @@ a {
   text-decoration: underline;
 }
 
-
 button, select {
   font-size: 1rem;
   height: 2rem;
@@ -133,8 +130,9 @@ hr {
   width: 100%;
   height: 2px;
   border: none;
-  opacity: 0.6;
+
   background-color: var(--primary-alt);
+  opacity: 0.6;
 
   margin-block: var(--space-sm);
 }
@@ -147,12 +145,11 @@ pre {
   margin-block: var(--space-xs);
   padding: var(--space-sm);
   white-space: pre-wrap;
-  border-radius: 8px;
 }
 
 @media screen and (max-width: 810px) {
   :root {
-    --centered-layout: 90vw
+    --centered-layout: 90vw;
   }
 
   h1 {
